# validate_social_learning

./: .gitignore  README.md
src/roborobo/: CMakeLists.txt  Makefile  _INSTALL.txt  makefile-manager  roborobo
src/roborobo/config/: myownproject.properties  sociallearning.properties
src/roborobo/data/: Thumbs.db  evolution_maxirobot-specs.psd
src/roborobo/data/evolution_layout/: evolution_layout_1000_1250_background_v1.psd  evolution_layout_1000_1250_environment_v1.psd  evolution_layout_1000_1250_environment_v3.psd  evolution_layout_1000_1250_environment_v4.psd  evolution_layout_1000_1250_foreground_v1.psd  evolution_layout_1000_1250_foreground_v2.psd  evolution_layout_1000_1250_foreground_v3.psd  evolution_layout_1000_1250_groundsensorvalues_v1.psd  evolution_maxirobot-mask-edgesOnly_v3_newDimmension.psd  evolution_maxirobot-mask_v3_newDimmension.psd  evolution_maxirobot-specs_cone_sensors.psd  evolution_maxirobot-specs_v3_newDimmension.psd  evolution_maxirobot-specs_v5_newDimmension.psd  evolution_maxirobot-specs_v6_newDimmension.psd
src/roborobo/include/contrib/neuralnetworks/: MLP.h  NeuralNetwork.h
src/roborobo/include/core/Agents/: Robot.h
src/roborobo/include/core/Controllers/: Controller.h
src/roborobo/include/core/Evaluators/: Evaluator.h
src/roborobo/include/core/RoboroboMain/: common.h  roborobo.h
src/roborobo/include/core/Solution/: Solution.h
src/roborobo/include/core/Utilities/: Barrier.h  Geometry.h  LogManager.h  Map.h  Misc.h  SharedDataStructure.h  SharedMap.h  SharedStack.h  SharedVector.h  Stack.h  Timer.h  Vector.h
src/roborobo/include/core/World/: World.h
src/roborobo/include/core/WorldModels/: RobotWorldModel.h
src/roborobo/include/ext/Config/: ConfigurationLoader.h  SocialLearningConfigurationLoader.h
src/roborobo/prj/: clone_project.py
src/roborobo/prj/SocialLearning/include/: EAHelper.h  SocialLearningAgentObserver.h  SocialLearningController.h  SocialLearningRobotEvaluator.h  SocialLearningWorldObserver.h
src/roborobo/prj/SocialLearning/src/: EAHelper.cpp  SocialLearningAgentObserver.cpp  SocialLearningController.cpp  SocialLearningRobotEvaluator.cpp  SocialLearningWorldObserver.cpp
src/roborobo/src/contrib/neuralnetworks/: Elman.cpp  MLP.cpp  NeuralNetwork.cpp
src/roborobo/src/core/: AgentObserver.cpp  Barrier.cpp  Graphics.cpp  LogManager.cpp  Misc.cpp  Robot.cpp  Timer.cpp  World.cpp  main.cpp  roborobo.cpp
src/roborobo/src/ext/: ConfigurationLoader.cpp  SocialLearningConfigurationLoader.cpp
